--- a/templates/walls.html
+++ b/templates/walls.html
@@ -6,6 +6,17 @@
   <head>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+
+
+    <script type=text/javascript src="{{
+  url_for('static', filename='jquery.js') }}"></script>
+
+    <script type=text/javascript src="{{
+  url_for('static', filename='script.js') }}"></script>
+<script type=text/javascript>
+  $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+</script>
+
     <title>ShitChat</title>
 
 <nav class="navbar navbar-default navbar-fixed-top">
@@ -22,7 +33,10 @@
 		<span style="line-height:5px;">
 	<form class="navbar-form navbar-left" role="search" method="POST">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search for a Wall" name="name" style="width:150px;">
+          <input type="text" class="form-control" placeholder="Search for a Wall" name=name id="name" style="width:150px;" autoComplete="off">
+            <br><span id="one"></span><br>
+            <br><span id="two"></span><br>
+            <br><span id="three"></span><br>
         </div>
         <input type="submit" name="b" class="btn btn-success" value="Search Wall">
 	<input type="submit" name="b" class="btn btn-info" value="Create a Wall!">
