--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -142,7 +142,7 @@
 			}
 			window.onload = function() {
 			    ctx.fillStyle ="rgba(0, 10, 25, 0)";
-			    edits = {{wall['edits']}};
+			    console.log({{wall['edits']}});
 
 			    //load red doodles
 			    ctx.fillStyle ="rgba(255, 0, 0, 1)";
@@ -239,12 +239,8 @@
 			        document.getElementById("green").style.visibility="hidden";
 			        document.getElementById("white").style.visibility="hidden";
 			        //take list of coordinates and upload to the doodle database
-			        console.log(redEdits);
 			        $.getJSON("/canvas/{{wall['wall_id']}}",{edits: edits});
-			        whiteEdits = [];
-			        redEdits = [];
 			        edits = [];
-
 			    }
 			    canEdit = !canEdit;
 			});
