--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -5,6 +5,16 @@
   <head>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/drop.css') }}">
+
+<script type=text/javascript src="{{
+  url_for('static', filename='jquery.js') }}"></script>
+
+    <script type=text/javascript src="{{
+  url_for('static', filename='script.js') }}"></script>
+<script type=text/javascript>
+  $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+</script>
     
     <title>ShitChat</title>
 
@@ -21,9 +31,21 @@
 	<span style="line-height:5px;">
 	<form class="navbar-form navbar-left" role="search" method="POST">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search for a Wall" name="name" style="width:150px;">
+          <input type="text" class="form-control" placeholder="Search for a Wall" name=name id="name" style="width:150px;" autoComplete="off">
+	  <ul id="search-ac">
+	    <br>
+	    <li id="search-li">
+	      <a href="home.html" id="one"><br></a>
+	    </li>
+	    <li id="search-li">
+	      <a href="home.html" id="two"><br></a>
+	    </li>
+	    <li id="search-li">
+	      <a href="home.html" id="three"><br></a>
+	    </li>
+	  </ul>
         </div>
-        <input type="submit" name="b" class="btn btn-success" value="search">
+        <input type="submit" name="b" class="btn btn-success" value="Search Wall">
 	<input type="submit" name="b" class="btn btn-info" value="Create a Wall!">
       </form>
 	</span>
