--- a/static/css/drop.css
+++ b/static/css/drop.css
@@ -96,7 +96,95 @@
   }
 }
 
-#search-li {
+
+
+#search-ac-friend {
+  display: none;
+  position: absolute;
+  top: 37px;
+  left: 15px;
+  right: 15px;
+  z-index: 10;
+  background: #fdfdfd;
+  border: 1px solid;
+  border-color: #cbcfe2 #c8cee7 #c4c7d7;
+  border-radius: 3px;
+  @include linear-gradient(top, #fdfdfd, #eceef4);
+  @include box-shadow(0 1px 2px rgba(black, .1));
+
+  li {
+    display: block;
+    height: 20px
+
+    &:first-child {
+      margin-top: 1px;
+
+      &:before, &:after {
+        content: '';
+        display: block;
+        width: 0;
+        height: 0;
+        position: absolute;
+        left: 50%;
+        margin-left: -5px;
+        border: 5px outset transparent;
+      }
+
+      &:before {
+        border-bottom: 5px solid #c4c7d7;
+        top: -11px;
+      }
+
+      &:after {
+        border-bottom: 5px solid #fdfdfd;
+        top: -10px;
+      }
+
+      &:hover { &:before, &:after { display: none; } }
+    }
+
+    &:last-child { margin-bottom: -1px; }
+  }
+
+  a {
+    display: block;
+    position: relative;
+    margin: 0 -1px;
+    padding: 6px 40px 6px 10px;
+    color: #808394;
+    font-weight: 500;
+    text-decoration: none;
+    text-shadow: 0 1px white;
+    border: 1px solid transparent;
+    border-radius: 3px;
+
+    span { font-weight: 200; }
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      right: 10px;
+      margin-top: -9px;
+      width: 18px;
+      height: 18px;
+      background: url('../img/arrow.png') 0 0 no-repeat;
+    }
+
+    &:hover {
+      color: white;
+      text-shadow: 0 -1px rgba(black, .3);
+      background: #338cdf;
+      border-color: #2380dd #2179d5 #1a60aa;
+      @include linear-gradient(top, #59aaf4, #338cdf);
+      @include box-shadow(inset 0 1px rgba(white, .2), 0 1px rgba(black, .08));
+    }
+  }
+}
+
+
+
+#search-li, #search-li-friend  {
     height: 20px;
     list-style-type: none;
 }
