--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -100,11 +100,20 @@
 		<div class="row">
 		<form type="POST">
 		<div class="col-sm-9">
-		<input type="text" class="form-control" name=friend id="friend" name=friend placeholder="Friend Email" autocomplete="off">
+		<input type="text" class="form-control" role="search" name="friend" id="friend" placeholder="Friend Email" autocomplete="off">
+		<ul id="search-ac-friend">
+		  <br>
+		  <li id="search-li-friend">
+		    <a href="home.html" id="friend_one"><br></a>
+		  </li>
+		  <li id="search-li-friend">
+		    <a href="home.html" id="friend_two"><br></a>
+		  </li>
+		  <li id="search-li-friend">
+		    <a href="home.html" id="friend_three"><br></a>
+		  </li>
+		</ul>
 		</div>
-		<br><span id="friend_one"></span><br>
-		<br><span id="friend_two"></span><br>
-		<br><span id="friend_three"></span><br>
 		<div class="col-sm-2">
 		<input type="submit" name="b" value="Add Friend" class="btn btn-success">
 		</div></div>
