--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -142,17 +142,30 @@
 			}
 			window.onload = function() {
 			    ctx.fillStyle ="rgba(0, 10, 25, 0)";
-<<<<<<< HEAD
+			    edits = {{wall['edits']}}
+			    console.log(edits);
+			    
+			    //load saved doodles
 			    console.log({{wall['edits']}});
-=======
 			    edits = {{wall['edits']}};
->>>>>>> f8b88a99c65e5efc1b892df4cb8827af02f5e0e6
 
 			    //load red doodles
 			    ctx.fillStyle ="rgba(255, 0, 0, 1)";
 			    for(var i = 0; i < edits[edits.length-1].length; i++){
 			    	console.log(i);
 			    	console.log(edits[edits.length-1][i]);
+			    	if(edits[edits.length-1][i][2] == 0){
+			    		ctx.fillStyle ="rgba(255, 0, 0, 1)";
+			    	}
+			    	if(edits[edits.length-1][i][2] == 1){
+			    		ctx.fillStyle ="rgba(0, 0, 255, 1)";
+			    	}
+			    	if(edits[edits.length-1][i][2] == 2){
+			    		ctx.fillStyle ="rgba(0, 255, 0, 1)";
+			    	}
+			    	if(edits[edits.length-1][i][2] == 3){
+			    		ctx.fillStyle ="rgba(255, 255, 255, 1)";
+			    	}
 					ctx.beginPath();
 					ctx.arc(edits[edits.length-1][i][0], edits[edits.length-1][i][1], 10, 0,2*Math.PI);
 					ctx.fill();
@@ -194,7 +207,7 @@
 			});
 
 			redMarker.addEventListener("click",function(e){
-			    ctx.fillStyle ="rgba(255, 0, 0, 1)";
+			    ctx.fillStyle = "rgba(255, 0, 0, 1)";
 			    radius= 10;
 			    whiteSelected = false;
 			    markerSelected = true;
@@ -204,7 +217,7 @@
 
 			});
 			blueMarker.addEventListener("click",function(e){
-			    ctx.fillStyle ="rgba(0, 0, 255, 1)";
+			    ctx.fillStyle = "rgba(0, 0, 255, 1)";
 			    radius= 10;
 			    whiteSelected = false;
 			    markerSelected = true;
@@ -213,7 +226,7 @@
 			    greenSelected = false;
 			});
 			greenMarker.addEventListener("click",function(e){
-			    ctx.fillStyle ="rgba(0, 255, 0, 1)";
+			    ctx.fillStyle = "rgba(0, 255, 0, 1)";
 			    radius= 10;
 			    whiteSelected = false;
 			    markerSelected = true;
@@ -222,7 +235,7 @@
 			    greenSelected = true;
 			});
 			whiteMarker.addEventListener("click",function(e){
-			    ctx.fillStyle ="rgba(255, 255, 255, 1)";
+			    ctx.fillStyle = "rgba(255, 255, 255, 1)";
 			    radius= 10;
 			    markerSelected = true;
 			    redSelected = false;
@@ -243,17 +256,13 @@
 			        document.getElementById("green").style.visibility="hidden";
 			        document.getElementById("white").style.visibility="hidden";
 			        //take list of coordinates and upload to the doodle database
-<<<<<<< HEAD
 			        $.getJSON("/canvas/{{wall['wall_id']}}",{edits: edits});
 			        edits = [];
-=======
 			        console.log(redEdits);
 			        $.getJSON("/canvas/{{wall['wall_id']}}",{edits: edits});
 			        whiteEdits = [];
 			        redEdits = [];
 			        edits = [];
-
->>>>>>> f8b88a99c65e5efc1b892df4cb8827af02f5e0e6
 			    }
 			    canEdit = !canEdit;
 			});
