--- a/static/css/drop.css
+++ b/static/css/drop.css
@@ -19,11 +19,11 @@
   left: 400px;
   right: 888px;
   z-index: 10;
-  background: #fdfdfd;
+  background: #0B3861;
   border: 1px solid;
   border-color: #cbcfe2 #c8cee7 #c4c7d7;
   border-radius: 3px;
-  @include linear-gradient(top, #fdfdfd, #eceef4);
+  @include linear-gradient(top, #0B3861, #eceef4);
   @include box-shadow(0 1px 2px rgba(black, .1));
 
   li {
@@ -124,7 +124,7 @@
         display: block;
         width: 0;
         height: 0;
-        position: absolute;
+        position: relative;
         left: 50%;
         margin-left: -5px;
         border: 5px outset transparent;
@@ -174,7 +174,7 @@
     &:hover {
       color: white;
       text-shadow: 0 -1px rgba(black, .3);
-      background: #338cdf;
+      background: #0B3861;
       border-color: #2380dd #2179d5 #1a60aa;
       @include linear-gradient(top, #59aaf4, #338cdf);
       @include box-shadow(inset 0 1px rgba(white, .2), 0 1px rgba(black, .08));
@@ -185,6 +185,6 @@
 
 
 #search-li, #search-li-friend  {
-    height: 20px;
+    height: 30px;
     list-style-type: none;
 }
