--- a/templates/home.html
+++ b/templates/home.html
@@ -33,16 +33,15 @@
 	<form class="navbar-form navbar-left search" role="search" method="POST">
         <div class="form-group">
           <input type="search" class="form-control" placeholder="Search for a Wall" name=name id="name" style="width:150px;" autoComplete="off">
-	  <ul id="search-ac">
-	    <br>
+	  <ul class="dropdown-menu" role="menu"  id="search-ac">
 	    <li id="search-li">
-	      <a href="home.html" id="one"><br></a>
+	      <a href="home.html" id="one"></a>
 	    </li>
 	    <li id="search-li">
-	      <a href="home.html" id="two"><br></a>
+	      <a href="home.html" id="two"></a>
 	    </li>
 	    <li id="search-li">
-	      <a href="home.html" id="three"><br></a>
+	      <a href="home.html" id="three"></a>
 	    </li>
 	  </ul>
         </div>
