--- a/static/css/drop.css
+++ b/static/css/drop.css
@@ -109,11 +109,11 @@ a {
   left: 15px;
   right: 15px;
   z-index: 10;
-  background: #fdfdfd;
+  background: #0B3861;
   border: 1px solid;
   border-color: #cbcfe2 #c8cee7 #c4c7d7;
   border-radius: 3px;
-  @include linear-gradient(top, #fdfdfd, #eceef4);
+  @include linear-gradient(top, #0B3861, #eceef4);
   @include box-shadow(0 1px 2px rgba(black, .1));
 
   li {
