--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -66,6 +66,8 @@
 <div class="row">
 <div class="col-lg-8">
 
+<div class="list-group">
+
 {% for con in conversations %}
 
     {% set emails = con['tag'] %}
@@ -99,9 +101,17 @@
     
     {% set unread = con['unread'][tag['index']] %}
     
-    <a href='/messages/{{tag['usr']}}' >  <h5 style="color: red;">{{other}} </h5> </a> {{unread}}
-    <hr>
+    <a href='/messages/{{tag['usr']}}' class="list-group-item"> 
+<span class="badge" style="background-color: #088A29;">
+{{unread}}
+</span>
+<h4 class="list-group-item-heading">{{other}}</h4>
+<p class="list-group-item-text">{{con['messages'][-1][0]}}: {{con['messages'][-1][2]}}</p><br>
+
+  </a>
 {% endfor %}
+
+</div>
 
 </div>
 <div class="col-lg-4">
