--- a/templates/walls.html
+++ b/templates/walls.html
@@ -32,19 +32,18 @@
 	<li class="active"><a href="/walls/pop">Walls <span class="sr-only">(current)</span></a></li>
     </ul>
 		<span style="line-height:5px;">
-	<form class="navbar-form navbar-left" role="search" method="POST">
+	<form class="navbar-form navbar-left search" role="search" method="POST">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search for a Wall" name=name id="name" style="width:150px;" autoComplete="off">
-            <ul id="search-ac">
-	    <br>
+          <input type="search" class="form-control" placeholder="Search for a Wall" name=name id="name" style="width:150px;" autoComplete="off">
+	  <ul class="dropdown-menu" role="menu"  id="search-ac">
 	    <li id="search-li">
-	      <a href="home.html" id="one"><br></a>
+	      <a href="home.html" id="one"></a>
 	    </li>
 	    <li id="search-li">
-	      <a href="home.html" id="two"><br></a>
+	      <a href="home.html" id="two"></a>
 	    </li>
 	    <li id="search-li">
-	      <a href="home.html" id="three"><br></a>
+	      <a href="home.html" id="three"></a>
 	    </li>
 	  </ul>
         </div>
@@ -62,7 +61,7 @@
 </nav>
 </head>
 
-<body style="padding-top:70px">
+<body style="padding-top:70px; background-image:url('../static/TextureUseamlessUtileUfloorUbu.jpg');">
 <div class="container-fluid">
 
 
