--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -7,6 +7,16 @@
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/drop.css') }}">
+
+    <script type=text/javascript src="{{
+  url_for('static', filename='jquery.js') }}"></script>
+
+    <script type=text/javascript src="{{
+  url_for('static', filename='script.js') }}"></script>
+<script type=text/javascript>
+  $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+</script>
     <title>ShitChat</title>
 
 <nav class="navbar navbar-default navbar-fixed-top">
@@ -20,9 +30,20 @@
 	<li><a href="/walls">Walls <span class="sr-only">(current)</span></a></li>
     </ul>
 	<span style="line-height:5px;">
-	<form class="navbar-form navbar-left" role="search" method="POST">
+	<form class="navbar-form navbar-left search" role="search" method="POST">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search for a Wall" name="name" style="width:150px;">
+          <input type="search" class="form-control" placeholder="Search for a Wall" name=name id="name" style="width:150px;" autoComplete="off">
+	  <ul class="dropdown-menu" role="menu"  id="search-ac">
+	    <li id="search-li">
+	      <a href="home.html" id="one"></a>
+	    </li>
+	    <li id="search-li">
+	      <a href="home.html" id="two"></a>
+	    </li>
+	    <li id="search-li">
+	      <a href="home.html" id="three"></a>
+	    </li>
+	  </ul>
         </div>
         <input type="submit" name="b" class="btn btn-success" value="Search Wall">
 	<input type="submit" name="b" class="btn btn-info" value="Create a Wall!">
