--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -27,7 +27,7 @@
     <ul class="nav navbar-nav">
 	<li><a href="/home">Home <span class="sr-only">(current)</span></a></li>
 	<li><a href="/inbox">Messages <span class="sr-only">(current)</span></a></li>
-	<li><a href="/walls">Walls <span class="sr-only">(current)</span></a></li>
+	<li><a href="/walls/pop">Walls <span class="sr-only">(current)</span></a></li>
     </ul>
 	<span style="line-height:5px;">
 	<form class="navbar-form navbar-left search" role="search" method="POST">
