--- a/templates/home.html
+++ b/templates/home.html
@@ -66,7 +66,7 @@
 {% endif %}
 <div class="row">
 <div class="col-lg-8">
-<h1>Trending Stall Walls</h1>
+<h1 style="color: white;">Trending Stall Walls</h1>
 
 <div class="list-group">
   {% for w in walls %}
@@ -127,7 +127,7 @@
 
 
         <div class="col-lg-4">
-		<div class="jumbotron jumbotron" style="height:1000px; background-color: #0B3861;">
+		<div class="jumbotron jumbotron" style="height:100%; background-color: #0B3861;">
 		<div class="container-fixed-right">
 		<center><h2 id="test">Announcements</h2></center>
 		<h4>Bet</b4>
