--- a/templates/walls.html
+++ b/templates/walls.html
@@ -65,7 +65,7 @@
 <div class="container-fluid">
 
 
-<h1>Public Bathroom</h1>
+<h1 style="color: white;">Public Bathroom</h1>
 
 <div class="dropdown" style="position:relative;">
   <button class="btn btn-info dropdown-toggle" type="button" id="sort" data-toggle="dropdown" aria-expanded="true">
