--- a/templates/create.html
+++ b/templates/create.html
@@ -64,7 +64,7 @@
 </nav>
 </head>
 
-<body style="padding-top:70px;">
+<body style="padding-top:70px;; background-image:url('../static/TextureUseamlessUtileUfloorUbu.jpg');">
 <div class="container-fluid">
 <div class="row">
 <div class="col-lg-3"><p></p></div>
