--- a/templates/messages.html
+++ b/templates/messages.html
@@ -62,7 +62,7 @@
 
 
 
-<body style="padding-top:70px;">
+<body style="padding-top:70px; background-image:url('../static/TextureUseamlessUtileUfloorUbu.jpg');">
 <div class="container-fluid">
 
 <div class="row">
@@ -91,7 +91,7 @@
     {% set other = tag['other'] %}
     {% set other = other|truncate( (other|length) - 2 , True, "") %}
 
-<h4>Conversation with {{other}}</h4>
+<h4 style="color: white;">Conversation with {{other}}</h4>
     {% endif %}
       <div style="overflow:scroll; height:80%; width: 100%; border:1px solid black; scrollTop:scrollHeight; padding-left:5px; background-color: #252E33;" id="MessageBlock">
           {% if conversation != 0 %}
