--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -58,7 +58,7 @@
 </nav>
 </head>
 
-<body style="padding-top:70px">
+<body style="padding-top:70px; background-image:url('../static/TextureUseamlessUtileUfloorUbu.jpg');">
 <div class="container-fluid">
 
 <div class="list-group">
