--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -124,7 +124,7 @@
 		<form type="POST">
 		<div class="col-sm-9">
 		<input type="text" class="form-control" role="search" name="friend" id="friend" placeholder="Friend Email" autocomplete="off">
-		<ul id="search-ac-friend">
+		<ul id="search-ac-friend" class="dropdown-menu" role="menu">
 		  <br>
 		  <li id="search-li-friend">
 		    <a href="home.html" id="friend_one"><br></a>
