idk if this is what kyler needs

--- a/static/css/drop.css
+++ b/static/css/drop.css
@@ -117,9 +117,10 @@ a {
 
   li {
     display: block;
+    height: 30px;
 
     &:first-child {
-      margin-top: 1px;
+      margin-top: 5px;
 
       &:before, &:after {
         content: '';
